--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,25 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  user: postgres
+  encoding: utf8
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: bs2_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: bs2_test
+
+staging:
+  <<: *default
+  database: bs2_staging
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: bs2_production
