--- a/config/database.yml
+++ b/config/database.yml
@@ -6,12 +6,11 @@
 #
 default: &default
   adapter: postgresql
-  user: postgres
   encoding: utf8
 
 development:
   <<: *default
-  user: bs2_development
+  username: bs2_development
   database: bs2_development
 
 # Warning: The database defined as "test" will be erased and
@@ -19,15 +18,15 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  user: bs2_test
+  username: bs2_test
   database: bs2_test
 
 staging:
   <<: *default
-  user: bs2_staging
+  username: bs2_staging
   database: bs2_staging
 
 production:
   <<: *default
-  user: bs2_production
+  username: bs2_production
   database: bs2_production
