update Docker files

--- a/docker/build_review/Dockerfile
+++ b/docker/build_review/Dockerfile
@@ -1,7 +1,7 @@
-# https://github.com/vvakame/docker-review/blob/master/Dockerfile
+# original: https://github.com/vvakame/docker-review/blob/master/Dockerfile
 
 FROM debian:jessie
-MAINTAINER vvakame
+MAINTAINER takahashim
 
 ENV LANG en_US.UTF-8
 
@@ -15,12 +15,13 @@ RUN apt-get install -y git-core zip
 
 # install Re:VIEW environment
 RUN apt-get install -y texlive-lang-cjk texlive-fonts-recommended
-RUN gem install review rake dropbox-sdk --no-rdoc --no-ri
+RUN gem install review rake --no-rdoc --no-ri
+RUN gem install dropbox-sdk --no-rdoc --no-ri
 
 # install node.js environment
 RUN apt-get install -y nodejs npm
 RUN ln -s /usr/bin/nodejs /usr/bin/node
 
-COPY build_review.rb /review/build_review.rb
+# copy build scripts and define workdir
+COPY scripts /review/scripts
 WORKDIR /review
-
